Avoid page breaks inside code block elements if possible

--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -27,6 +27,7 @@ pre {
     word-break: break-all;
     padding: 4pt;
     border: 1pt solid #000000;
+    page-break-inside: avoid;
 }
 
 table {
